--- a/todo-list/index.html
+++ b/todo-list/index.html
@@ -4,7 +4,8 @@
         <title>Todo-list</title>
     </head>
     <body>
-        <div id="root"></div>
+        <div id="root">
         <!--<script src="./dist/index.bundle.js"></script>-->
+        </div>
     </body>
 </html>
